--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Javascript FTP protocol implementation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "java -jar ./test/server/PortableFTPServer.jar 2121 test test ./lib"
   },
   "keywords": [
     "ftp"
