--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Javascript FTP protocol implementation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./test/**/*.spec.js",
     "server": "java -jar ./test/server/PortableFTPServer.jar 2121 test test ./lib"
   },
   "keywords": [
     "ftp"
   ],
   "author": "Valerii Radchenko",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  }
 }
